objects/CMPL123CME__MedDRA_High_Level_Group_Term__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of High Level Group Term</description>
        <inlineHelpText>Active Status of High Level Group Term</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_costart_sym__c</fullName>
        <description>Symbol allocated by the COSTART terminology</description>
        <inlineHelpText>Symbol allocated by the COSTART terminology</inlineHelpText>
        <label>HLGT COSTART Code</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_harts_code__c</fullName>
        <description>Code allocated by the HARTS terminology</description>
        <inlineHelpText>Code allocated by the HARTS terminology</inlineHelpText>
        <label>HLGT HARTS Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_icd10_code__c</fullName>
        <description>Code allocated by the 10th Revision of the International Classification of Diseases</description>
        <inlineHelpText>Code allocated by the 10th Revision of the International Classification of Diseases</inlineHelpText>
        <label>HLGT ICD-10 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_icd9_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases</inlineHelpText>
        <label>HLGT ICD-9 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_icd9cm_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification</inlineHelpText>
        <label>HLGT ICD-9-CM Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_jart_code__c</fullName>
        <description>Code allocated by the J-ART terminology</description>
        <inlineHelpText>Code allocated by the J-ART terminology</inlineHelpText>
        <label>HLGT J-ART Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_name__c</fullName>
        <description>Full name of the High Level Group Term</description>
        <externalId>true</externalId>
        <inlineHelpText>Full name of the High Level Group Term</inlineHelpText>
        <label>HLGT Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>HLGT Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_whoart_code__c</fullName>
        <description>Code allocated by the WHO-ART terminology</description>
        <inlineHelpText>Code allocated by the WHO-ART terminology</inlineHelpText>
        <label>HLGT WHO-ART Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>MedDRA High Level Group Term</label>
    <nameField>
        <label>HLGT Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA High Level Group Term</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__HLGT_Code_Should_Be_8_Characters_Only</fullName>
        <active>true</active>
        <description>High Level Group Term Code value must have 8 characters only</description>
        <errorConditionFormula>OR(
LEN(Name) &lt; 8 ,
LEN(Name) &gt; 8
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>HLGT Code value must have 8 characters only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__HLGT_Name_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__hlgt_name__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__hlgt_name__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>